argoDir/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-sample-service
spec:
  type: ClusterIP
  selector:
    app: argo-sample-web
  ports:
    - port: 80
      protocol: TCP
      targetPort: 7070
